--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ POSTGRES_PORT=5432
 POSTGRES_DB=portafolio
 POSTGRES_USER=postgres  
 POSTGRES_PASSWORD=123456
-DATABASE_URL=postgres://postgres:123456@postgres:5432/
+DATABASE_URL=postgres://postgres:123456@localhost:5432/portafolio
 
 # Redis
 REDIS_URL=redis://redis:6379/0
