--- a/.env
+++ b/.env
@@ -1,6 +1,9 @@
 #Djano
 DJANGO_SECRET_KEY= "llavemuysecreta"
 DJANGO_ALLOWED_HOSTS= "*"
+DJANGO_SETTINGS_MODULE= "config.settings.production"
+DJANGO_ADMIN_URL="admin/jerson"
+
 # PostgreSQL
 POSTGRES_HOST=postgres
 POSTGRES_PORT=5432
