Change production email settngs

--- a/.env
+++ b/.env
@@ -3,6 +3,7 @@ DJANGO_SECRET_KEY= "llavemuysecreta"
 DJANGO_ALLOWED_HOSTS= "*"
 DJANGO_SETTINGS_MODULE= "config.settings.production"
 DJANGO_ADMIN_URL="admin/jerson"
+DJANGO_SECURE_SSL_REDIRECT=false
 
 # PostgreSQL
 POSTGRES_HOST=postgres
