changes send email

--- a/.env
+++ b/.env
@@ -1,9 +1,11 @@
 #Djano
-DJANGO_SECRET_KEY= "llavemuysecreta"
-DJANGO_ALLOWED_HOSTS= "*"
-DJANGO_SETTINGS_MODULE= "config.settings.production"
-DJANGO_ADMIN_URL="admin/jerson"
+DJANGO_SECRET_KEY= llavemuysecreta
+DJANGO_ALLOWED_HOSTS=*
+DJANGO_SETTINGS_MODULE= config.settings.local
+DJANGO_ADMIN_URL=admin/jerson
 DJANGO_SECURE_SSL_REDIRECT=false
+EMAIL_HOST_USER = xljersonlx@gmail.com
+EMAIL_HOST_PASSWORD= hsobhkzujhbrlogz
 
 # PostgreSQL
 POSTGRES_HOST=postgres
